--- a/Backups/Backups.csproj
+++ b/Backups/Backups.csproj
@@ -26,4 +26,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Backups.Client\Backups.Client.csproj" />
+  </ItemGroup>
+
 </Project>
