--- a/BackupsExtra.Tests/BackupsExtra.Tests.csproj
+++ b/BackupsExtra.Tests/BackupsExtra.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Backups.Tests\Backups.Tests.csproj" />
     <ProjectReference Include="..\BackupsExtra\BackupsExtra.csproj" />
     <ProjectReference Include="..\Backups\Backups.csproj" />
   </ItemGroup>
